# yousician

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
ci_cd/: .gitlab-ci.yml
ci_cd/ci/: ci.env
src/: .sqlfluff  .sqlfluffignore  dbt_project.yml  dodo.py  entrypoint.sh  packages.yml  profiles.yml  pyproject.toml
src/analysis/: dim_activity.sql  review.md
src/data/: properties.yml
src/macros/: drop_target_schema.sql  drop_target_schema.yml  test_late_binding_views.sql  test_late_binding_views.yml
src/models/marts/: ad_networks_mart.sql  mart__ad_networks.sql  marts.yml
src/models/staging/: ad_networks.yml  stg__ad_network_1__campaigns.sql  stg__ad_network_1__geos.sql  stg__ad_network_1__report.sql
src/models/staging/base/: base__ad_network_1__campaign_updates.sql  base__ad_network_1__country_report.sql  base__ad_network_1__detailed_report.sql  base__ad_network_1__geo_dictionary.sql  base__ad_network_2__report.sql
src/tools/: limit.py
