[tool.doit]
dep_file = "/tmp/.doit.db"

[tool.poetry]
name = "seed"
version = "0.1.0"
description = "seed"
authors = ["John Sena"]

[tool.poetry.dependencies]
python = "^3.10"
cffi = "^1.15.1"
cryptography = "^38.0.3"
dbt-core = "^1.3.0"
dbt-postgres = "^1.3.0"
setuptools = "^65.5.1"
doit = "^0.36.0"

[tool.poetry.group.dev.dependencies]
poetryup = "^0.12.3"
bandit = "^1.7.4"
safety = "^2.3.1"
sqlfluff = "^1.4.1"
sqlfluff-templater-dbt = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
